index.css
@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i');

body {
  font-family: 'Roboto';
}

.container {
  margin: 0 auto;
  width: 1080px;
}

section:not(:last-child) {
  border-bottom: 1px lightgray solid;
  margin-bottom: 15px;
}

.header {
  padding-bottom: 30px;
}

.skills-lists {
  display: flex;
}

.skills-right {
  margin-left: 100px;
}

li {
  margin-bottom: 7px;
}

ul {
  padding-left: 20px;
}

.section-title {
  font-size: 14px;
  color: #565656;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 10px;
}

.place-and-date {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.date {
  font-style: italic;
  font-size: 15px;
}

.name {
  text-align: center;
  text-transform: uppercase;
  font-weight: bolder;
  font-size: 36px;
}

.header {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.header .info, .header .name {
  margin: 10px 0;
}

.header-item, .header-item a {
  color: #565656;
  text-decoration: none;
}

.header-item a:visited {
  color: #565656;
}

.header-item a:hover {
  color: #565656;
}

.info {
  display: flex;
  justify-content: center;
  text-align: center;
  font-weight: 500;
  color: rgb(54, 54, 54);
  margin-top: 20px;
}

.contact, .links {
  margin: 0 10px;
  display: flex;
  flex-direction: column;
}

.contact {
  align-items: flex-end;
}

.links {
  align-items: flex-start;
}

.company-name {
  font-size: 18px;
  font-weight: bold;
}

.location {
  font-size: 14px;
  font-style: italic;
}

.job-title {
  margin-top: 10px;
}

.company-bullets:not(:last-child) {
  margin-bottom: 30px;
}

.personal-project-title {
  font-size: 18px;
  font-weight: bold;
}

.personal-project-date {
  font-style: italic;
  font-size: 15px;
}

.personal-project ul {
  margin: 5px 0 20px 0;
}

.personal-project li  {
  margin: 2px 0;
}

.personal-project-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.personal-project-year {
  font-style: italic;
  font-size: 15px;
}

.personal-project-github-link a,
.personal-project-github-link a:hover,
.personal-project-github-link a:visited {
  font-size: 12px;
  font-style: italic;
  color: black;
  text-decoration: none;
  font-weight: normal;
}

